style.css
*, 
*::before,
*::after {
	box-sizing: border-box;
	margin:0;
	padding: 0;
}

:root {
	font-size: 16px;
}

body {
	position: relative;
	height: 100vh;
	width:100vw;
	font-family: 'Lato', sans-serif;
	font-weight: 400;
	font-size: 1rem;
	color: white;
	background:url('img/dic-01.jpg') no-repeat ;
	background-position: 50% 10%;
	background-size: cover;
	overflow: hidden;
}

.container {
	position: absolute;
	left: 50%;
	top: 50%;
	transform: translate(-50%, -50%);
	width: 800px;
	max-width: 90%;
	margin-top: 1em;
	margin-bottom: 1em;
	padding: 1.5em;
	text-align: center;
	border-radius: 10px;
	background-color: rgba(0, 0, 0, 0.7);
}

.time {
	font-size: 10rem;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
	text-rendering: optimizeLegibility;
}

.greeting {
	font-size: 3rem;
}

/* greeting -> form */
.search-form {
	margin-top: 20px;
	width: 100%;
}

.search-input-label{
	display:inline-block;
	padding-bottom: 5px;
	margin-bottom: 10px;
	border-bottom: 2px white solid;
}

.search-input-label:focus-within{
	animation: movingBorder 1s linear;
}

.search-input {
	padding-left: 5px;
	width:auto;
	min-width: 150px;
	color: #fff;
	font-size: 1.3rem;
	border: none;
	background-color: transparent;
	/* 不用transition的原因是因為它不像animation可以指定起始狀態0% */
	/* transition: border-bottom 0.5s ease; */
}

.search-input:focus {
	outline: none;
}

.search-btn {
	color: white;
	border: none;
	background-color: transparent;
	cursor: pointer;

}

.search-btn:focus {
	outline: none;
}
/* I think input doesn't have pseudoelements */
/* .search-input::after {
	content: '';
	[...]
} */

@keyframes movingBorder {
	0%{
		border-bottom: 2px transparent solid;
	}

	100%{
		border-bottom: 2px white solid;
	}
}

.search-select-label {
	margin-right: 5px;
}

.search-select {
	width: auto;
	min-width: 150px;
	font: inherit;
	font-weight: 400;
	border: 1px solid #ced4da;
	background-color: #fff;
}

.result {
	display: none;
	margin: 10px auto 0;
	width: 800px;
	max-width: 60%;
	text-align: start;
}

.result-word {
	font-size: 2rem;
	text-align: center;
	margin-bottom: 5px;
}

#output {
	max-width: 100%;
	text-align: start;
}

.result-sentence {
	max-width: 100%;
	word-break: break-word;
	word-wrap: break-word;
}

.overlay {
	position: fixed;
	top: 0;
	bottom: 0;
	left: 0;
	right: 0;
	background: rgba(0, 0, 0, 0.7);
	opacity: 0;
	visibility: hidden;
	transition: opacity 400ms;
}

.overlay[data-active="true"] {
	visibility: visible;
	opacity: 1;
}

.popup {
	position: absolute;
	left: 50%;
	top: 50%;
	transform: translate(-50%, -50%);
	width: 600px;
	max-width: 90%;
	padding: 3% 3%;
	color: black;
	background-color: #e9ecef;
	border-radius: 10px;
	transition: all 5s ease-in-out;
}

.popup-header {
	position: relative;
	margin-bottom: 15px;
}

.popup-header > h2 {
	text-align: center;
	font-size: 5rem;
}

.popup-header .close {
	position: absolute;
	right: -10px;
	top: -20px;
	text-decoration: none;
	color: black;
	font-size: 2rem;
	font-weight: 600;
	transition: all 200ms;
}

.popup-header .close:hover {
	color: rgb(120, 60, 55);
}

.popup-content > p {
	--margin:5%;
	width: calc(100% - var(--margin));
	margin: 0 var(--margin);
	font-size: 1.2rem;
	font-weight: 600;
	line-height: 1.5;
}

@media screen and (max-width:600px){
	body {
		height: 100%;
		width: 100%;
	}

	.time {
		font-size: 4rem;
		font-weight: bold;
	}
	
	.greeting {
		font-size: 2rem;
		font-weight: bold;
	}

	.search-input-label {
		display: inline-flex;
	}

	.search-select-label {
		display: block;
		margin-bottom: 5px;
		font-size: 18px;
	}

	.result {
		max-width: 70%;
	}

	.result-word {
		font-size: 1.8rem;
		line-height: 1;
	}

	.result-sentence {
		font-size: 14px;
	}
}

